unpackaged/main/default/objects/Rep_Code__c/Rep_Code__c.object-meta.xml
<CustomObject>
    <label>Rep Code</label>
    <nameField>
        <label>Rep Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rep Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>