unpackaged/main/default/objects/Rep_Code__c/fields/Advisor_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Tax_Id__c</fullName>
    <label>Advisor Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>