unpackaged/main/default/objects/Rep_Code__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>