unpackaged/main/default/objects/Rep_Code__c/fields/Related_Advisors__c.field-meta.xml
<CustomField>
    <fullName>Related_Advisors__c</fullName>
    <label>Related Advisors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>