unpackaged/main/default/objects/Rep_Code__c/fields/Rep_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code_Type__c</fullName>
    <label>Rep Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rep Number</fullName>
            </value>
            <value>
                <fullName>Orion ID</fullName>
            </value>
            <value>
                <fullName>G-Number</fullName>
            </value>
            <value>
                <fullName>Master Account Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>