unpackaged/main/default/objects/Rep_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Financial_Advisor_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>